pruebaFinal/force-app/main/default/objects/Case/fields/analisisText__c.field-meta.xml
<CustomField>
    <fullName>analisisText__c</fullName>
    <label>Análisis del caso</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>