pruebaFinal/force-app/main/default/objects/Case/fields/Email_de_la_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Email_de_la_Cuenta__c</fullName>
    <formula>Account.Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email de la Cuenta</label>
    <type>Text</type>
</CustomField>