pruebaFinal/force-app/main/default/objects/Case/fields/Inf_Adicional__c.field-meta.xml
<CustomField>
    <fullName>Inf_Adicional__c</fullName>
    <description>Datos de contexto, números de operación o referencias dadas por el cliente.</description>
    <inlineHelpText>Datos de contexto, números de operación o referencias dadas por el cliente.</inlineHelpText>
    <label>Información Adicional</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>