pruebaFinal/force-app/main/default/objects/Case/fields/Oportunidad_Origen__c.field-meta.xml
<CustomField>
    <fullName>Oportunidad_Origen__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Permite atar un reclamo postventa directamente al trámite comercial donde se originó el producto.</description>
    <inlineHelpText>Permite atar un reclamo postventa directamente al trámite comercial donde se originó el producto.</inlineHelpText>
    <label>Oportunidad Origen</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>