pruebaFinal/force-app/main/default/objects/Case/fields/resultadoCase__c.field-meta.xml
<CustomField>
    <fullName>resultadoCase__c</fullName>
    <label>Resultado Case</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>resultadoCase</valueSetName>
    </valueSet>
</CustomField>