pruebaFinal/force-app/main/default/objects/Case/fields/Segmento_de_Tarjeta__c.field-meta.xml
<CustomField>
    <fullName>Segmento_de_Tarjeta__c</fullName>
    <label>Segmento de Tarjeta</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Tipo_de_Tarjeta__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>segmentoDeTarjeta</valueSetName>
    </valueSet>
</CustomField>