pruebaFinal/force-app/main/default/objects/Case/fields/Subtipo_de_Caso__c.field-meta.xml
<CustomField>
    <fullName>Subtipo_de_Caso__c</fullName>
    <label>Subtipo de Caso</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Tipo_de_Caso__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>subtipoCaso</valueSetName>
    </valueSet>
</CustomField>