pruebaFinal/force-app/main/default/objects/Case/fields/Tipo_de_Caso__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Caso__c</fullName>
    <label>Tipo de Caso</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tipoDeCaso</valueSetName>
    </valueSet>
</CustomField>