pruebaFinal/force-app/main/default/objects/Case/fields/Tipo_de_Tarjeta__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Tarjeta__c</fullName>
    <label>Tipo de Tarjeta</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tipoDeTarjeta</valueSetName>
    </valueSet>
</CustomField>