pruebaFinal/force-app/main/default/objects/Case/validationRules/Cuenta_Obligatoria.validationRule-meta.xml
<ValidationRule>
    <fullName>Cuenta_Obligatoria</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(AccountId)</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>El Caso debe tener una Cuenta relacionada obligatoriamente.</errorMessage>
</ValidationRule>